fix removeWithPath, copyPath